【FIX】5.6进度保存 能跑 待考虑复现COLLAPSE逻辑